--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -1,6 +1,11 @@
 {
   "name": "microservice_workshop",
-  "main": "01_monitor.js",
+  "private": true,
+  "scripts": {
+    "start": "npm run monitor",
+    "monitor": "node 01_monitor.js",
+    "needs": "node 02_needs.js"
+  },
   "dependencies": {
     "amqp": "^0.2.4"
   }
